# update-your-capital-schemes

./: .gitignore  Dockerfile  LICENCE  Makefile  README.md  alembic.ini  cold-backup.sh  compose.yaml  get-env.sh  locustfile.py  package-lock.json  package.json  proxy.sh  pyproject.toml  pytest.ini  run-standalone.sh
.github/workflows/: ci.yml  deploy-dev.yml  deploy-test.yml  deploy.yml  dev.yml
cloud/: README.md
cloud/docker-repository/: .terraform.lock.hcl  main.tf  outputs.tf  versions.tf
cloud/docker-repository/github-action/: main.tf
cloud/docker-repository/github-action-push/: main.tf
cloud/schemes/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  set-secrets.sh  terraform.tfvars  variables.tf  versions.tf
cloud/schemes/cloud-run/: main.tf  outputs.tf  variables.tf  versions.tf
cloud/schemes/cloud-sql/: main.tf  outputs.tf  variables.tf
cloud/schemes/github-action/: main.tf  outputs.tf  variables.tf
cloud/schemes/github-action-database/: main.tf  outputs.tf
cloud/schemes/github-action-deploy/: main.tf  variables.tf
cloud/schemes/github-action-users/: main.tf  outputs.tf  variables.tf
cloud/schemes/load-balancer/: main.tf  outputs.tf  variables.tf
cloud/schemes/secret-manager/: main.tf
cloud/schemes/vpc/: main.tf  outputs.tf
cloud/schemes/web-application-firewall/: main.tf  outputs.tf
cloud/tf-backend/: .terraform.lock.hcl  main.tf  variables.tf  versions.tf
data/: README.md  example.http  resource-created.js  run.sh
docs/: database.md  maintenance.md  releasing.md
docs/user-guide/: README.md  generate.sh  index.md
schemes/: __init__.py  annotations.py  api.py  api_key_auth.py  auth.py  authorities.py  basic_auth.py  config.py  dicts.py  home.py  landing.py  oauth.py  schemes.py  sessions.py  start.py  users.py
schemes/assets/: govuk-frontend.scss  govuk-one-login-service-header.scss
schemes/auth/: __init__.py  bearer.py
schemes/authorities/: __init__.py  domain.py  services.py  views.py
schemes/domain/: authorities.py  dates.py  reporting_window.py  schemes.py  users.py
schemes/domain/schemes/: __init__.py  data_source.py  data_sources.py  dates.py  funding.py  milestones.py  observations.py  outputs.py  overview.py  reviews.py  schemes.py
schemes/infrastructure/: __init__.py  api.py  authorities.py  clock.py  schemes.py  users.py
schemes/infrastructure/api/: __init__.py  authorities.py  data_sources.py  dates.py  financial_types.py  funding_programmes.py  oauth.py  observation_types.py  schemes.py
schemes/infrastructure/database/: __init__.py  authorities.py  users.py
schemes/infrastructure/migrations/: env.py
schemes/infrastructure/schemes/: __init__.py  funding.py  milestones.py  observations.py  outputs.py  schemes.py
schemes/migrations/: env.py  script.py.mako
schemes/schemes/: __init__.py  domain.py  services.py  views.py
schemes/services/: authorities.py  schemes.py  users.py
schemes/static/: govuk-frontend.scss
schemes/templates/: 500.html  base.html  home.html  index.html  scheme.html  scheme_funding.html  scheme_overview.html  schemes.html  service_base.html  start.html  unauthorized.html
schemes/templates/govuk_one_login_service_header/: macro.html
schemes/users/: __init__.py  domain.py  services.py  views.py
schemes/views/: authorities.py  clock.py  filters.py  forms.py  legal.py  schemes.py  start.py  users.py
tests/: builders.py  conftest.py  oauth.py  test_app.py  test_builders.py  test_dicts.py  test_oauth.py  test_sessions.py
tests/domain/: test_authorities.py  test_dates.py  test_reporting_window.py  test_schemes.py  test_users.py
tests/e2e/: api_client.py  app_client.py  builders.py  conftest.py  page_adapter.py  pages.py  test_app.py  test_footer.py  test_header.py  test_home.py  test_landing.py  test_scheme.py  test_scheme_funding.py  test_scheme_milestones.py  test_scheme_outputs.py  test_scheme_overview.py  test_scheme_review.py  test_schemes.py  test_start.py
tests/infrastructure/: conftest.py  test_api.py  test_authorities.py  test_clock.py  test_schemes.py  test_users.py
tests/integration/: builders.py  conftest.py  fakes.py  oidc.py  pages.py  test_api.py  test_app.py  test_auth.py  test_authorities.py  test_basic_auth.py  test_clock.py  test_database.py  test_footer.py  test_header.py  test_home.py  test_http_caching.py  test_http_security.py  test_landing.py  test_legal.py  test_metadata.py  test_scheme.py  test_scheme_funding.py  test_scheme_milestones.py  test_scheme_outputs.py  test_scheme_overview.py  test_scheme_review.py  test_schemes.py  test_start.py  test_users.py
tests/unit/: conftest.py  test_authorities.py  test_users.py
tests/views/: conftest.py  test_authorities.py  test_fields.py  test_filters.py  test_forms.py  test_schemes.py  test_users.py
(+204 files in other folders)
