[project]
name = "schemes"
version = "1.0.0"
description = "Update your capital schemes service."
requires-python = ">=3.13"
dependencies = [
    "alembic~=1.16.0",
    "authlib~=1.6.0",
    "flask~=3.1.0",
    "flask-session[sqlalchemy]~=0.8.0",
    "govuk-frontend-jinja~=3.6.0",
    "govuk-frontend-wtf~=3.2.0",
    "gunicorn~=23.0.0",
    "inject~=5.2.0",
    "pg8000~=1.31.0",
    "pydantic~=2.11.0",
    "python-dotenv~=1.1.0",
    "requests~=2.32.0",
    "sqlalchemy~=2.0.0"
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4~=4.13.0",
    "black~=25.1.0",
    "isort~=6.0.0",
    "mypy~=1.16.0",
    "playwright~=1.52.0",
    "pytest-flask~=1.3.0",
    "pytest-playwright~=0.7.0",
    "pytest~=8.4.0",
    "ruff~=0.11.0",
    "responses~=0.25.0",
    "types-requests~=2.32.0",
    "types-wtforms~=3.2.0"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

# alembic

[tool.alembic]
script_location = "schemes:infrastructure/database/migrations"

# black

[tool.black]
line-length = 120

# isort

[tool.isort]
profile = "black"

# mypy

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "flask_session.*",
    "flask_wtf.*",
    "govuk_frontend_wtf.*",
    "pytest_flask.*",
    "wtforms.*"
]
ignore_missing_imports = true

# pytest

[tool.pytest.ini_options]
live_server_scope = "package"
addopts = "--screenshot only-on-failure"

# ruff

[tool.ruff]
line-length = 120
